--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,6 @@
     <a href="/settings" class="nav__link" data-link>Settings</a>
   </nav>
   <div id="app"></div>
-  <script src="./static/js/bundle/main.js"></script>
+  <script src="./static/js/bundle/index.js"></script>
 </body>
 </html>
